k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: v1.bibliotech.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: spring-boot-k8s-service
                port:
                  number: 8080
